--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -34,29 +34,17 @@
    "source": [
     "# | export\n",
     "class MaskedTransformer(nn.Module):\n",
-    "    def __init__(self, cfg, freq=2):\n",
+    "    def __init__(self, cfg):\n",
     "        super().__init__()\n",
     "        self.cfg = cfg\n",
-    "        self.block_size = cfg.n_positions * freq + 1  # input, output pairs + 1 for the target\n",
     "        self.transformer = nn.ModuleDict(dict(\n",
-    "            wpe=nn.Embedding(self.block_size, cfg.n_embd),\n",
     "            drop=nn.Dropout(cfg.dropout),\n",
     "            h=nn.ModuleList([Block(cfg) for _ in range(cfg.n_layer)]),\n",
-    "            ln_f=LayerNorm(cfg.n_embd, bias=cfg.bias),\n",
     "        ))\n",
-    "        if self.__class__ == MaskedTransformer: init_all_params(self)\n",
     "\n",
     "    def forward(self, embs):\n",
-    "        device = embs.device\n",
-    "        bs, t, dim = embs.size()\n",
-    "        assert t <= self.block_size, f\"Cannot forward sequence of length {t}, block size is only {self.block_size}\"\n",
-    "        pos = torch.arange(0, t, dtype=torch.long, device=device)\n",
-    "\n",
-    "        pos_emb = self.transformer.wpe(pos)\n",
-    "        x = self.transformer.drop(embs + pos_emb)\n",
-    "        for block in self.transformer.h:\n",
-    "            x = block(x)\n",
-    "        x = self.transformer.ln_f(x)\n",
+    "        x = self.transformer.drop(embs)\n",
+    "        for block in self.transformer.h: x = block(x)\n",
     "\n",
     "        return x\n",
     "    \n",
@@ -90,21 +78,33 @@
     "        super().__init__()\n",
     "        self.cfg = cfg\n",
     "        self.freq = freq  # one input, one output, and so on\n",
-    "        self.backbone = MaskedTransformer(cfg, freq)\n",
+    "        self.backbone = MaskedTransformer(cfg)\n",
+    "        self.block_size = cfg.n_positions * freq + 1  # input, output pairs + 1 for the target\n",
     "        self.read_in = nn.Linear(cfg.n_dims, cfg.n_embd)\n",
+    "        self.wpe=nn.Embedding(self.block_size, cfg.n_embd)\n",
+    "        \n",
+    "        self.ln_f=LayerNorm(cfg.n_embd, bias=cfg.bias)\n",
     "        self.read_out = nn.Linear(cfg.n_embd, 1)\n",
-    "\n",
     "        init_all_params(self)\n",
     "\n",
     "    def create_prompt(self, xs, ys):\n",
     "        n_dims = xs.shape[-1]\n",
     "        y_wide = F.pad(ys.unsqueeze(-1), (0, n_dims - 1), value=0)\n",
     "        return torch.stack((xs, y_wide), dim=2).flatten(1, 2)\n",
+    "    \n",
+    "    def add_positional(self, embs):\n",
+    "        device = embs.device\n",
+    "        _, t, _ = embs.size()\n",
+    "        assert t <= self.block_size, f\"Cannot forward sequence of length {t}, block size is only {self.block_size}\"\n",
+    "        pos = torch.arange(0, t, dtype=torch.long, device=device)\n",
+    "        return embs + self.wpe(pos)\n",
     "\n",
     "    def forward(self, xs, ys):\n",
     "        x = self.create_prompt(xs, ys)\n",
     "        x = self.read_in(x)\n",
+    "        x = self.add_positional(x)\n",
     "        x = self.backbone(x)\n",
+    "        x = self.ln_f(x)\n",
     "        y = self.read_out(x).squeeze(-1)\n",
     "        y = y[:, ::self.freq]  # only take the outputs (every other element)\n",
     "        return y"
@@ -121,18 +121,23 @@
     "    '''Looped transformer for tasks from in-context learning'''\n",
     "\n",
     "    def __init__(self, cfg):\n",
-    "        super().__init__(cfg)\n",
-    "        self.n_loops = cfg.n_loops\n",
-    "        self.n_loop_window = cfg.n_loop_window\n",
-    "        \n",
+    "        super().__init__(cfg, freq=2)\n",
+    "        self.n_loops, self.n_loop_window = cfg.n_loops, cfg.n_loop_window\n",
+    "        self.repeat_positional = cfg.repeat_positional\n",
+    "        self.repeat_ln = cfg.repeat_ln\n",
+    "\n",
     "    def _model(self, z, x):\n",
-    "        z = self.backbone(z + x)\n",
+    "        z = z + x\n",
+    "        if self.repeat_positional: z = self.add_positional(z)\n",
+    "        z = self.backbone(z)\n",
+    "        if self.repeat_ln: z = self.ln_f(z)\n",
     "        return z\n",
-    "    \n",
+    "\n",
     "    def forward(self, xs, ys):\n",
     "        horizon_start = max(0, self.n_loops - self.n_loop_window)\n",
     "        x = self.create_prompt(xs, ys)\n",
     "        x = self.read_in(x)\n",
+    "        if not self.repeat_positional: x = self.add_positional(x)\n",
     "        z = torch.zeros_like(x)\n",
     "        preds = []\n",
     "        for i in range(self.n_loops):\n",
@@ -140,12 +145,15 @@
     "                with torch.no_grad(): z = self._model(z, x)\n",
     "                continue\n",
     "            z = self._model(z, x)\n",
-    "            y = self.read_out(z).squeeze(-1)\n",
+    "            y = z if self.repeat_ln else self.ln_f(z)\n",
+    "            y = self.read_out(y).squeeze(-1)\n",
     "            preds.append(y[:, ::self.freq])\n",
-    "            if self.cfg.keep_n_tokens: \n",
+    "            if self.cfg.keep_n_tokens:\n",
     "                z = z[:, -self.cfg.keep_n_tokens:]\n",
     "                x = x[:, -self.cfg.keep_n_tokens:]\n",
-    "        return torch.stack(preds) if self.training else preds[-1] # for evaluation, authors only use the last prediction\n",
+    "        # for evaluation, authors only use the last prediction\n",
+    "        return torch.stack(preds) if self.training else preds[-1]\n",
+    "\n",
     "\n",
     "def loop_loss(preds, ys): return F.mse_loss(preds, ys.expand_as(preds))"
    ]
