--- a/nbs/03_training.ipynb
+++ b/nbs/03_training.ipynb
@@ -16,6 +16,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
+    "import time\n",
     "from pathlib import Path\n",
     "\n",
     "import torch\n",
@@ -23,7 +24,8 @@
     "from fastprogress import master_bar, progress_bar\n",
     "from omegaconf import OmegaConf\n",
     "from torch import optim\n",
-    "from looped_experiments.utils import def_device, to_device, to_cpu"
+    "\n",
+    "from looped_experiments.utils import def_device, to_cpu, to_device"
    ]
   },
   {
@@ -131,19 +133,41 @@
     "class SaveModelCB(Callback):\n",
     "    order = 1\n",
     "\n",
-    "    def __init__(self, save_dir, save_every_n=1000, max_to_keep=5):\n",
+    "    def __init__(self, save_dir, save_every_n=1000, max_to_keep=5, save_training=True):\n",
     "        self.dir, self.save_every_n, self.max_to_keep = Path(save_dir), save_every_n, max_to_keep\n",
+    "        self.save_training = save_training\n",
     "        self.dir.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "    def after_batch(self, learn):\n",
     "        if learn.train_step % self.save_every_n == 0:\n",
-    "            torch.save(learn.model.state_dict(), self.dir / f\"model_{learn.train_step}.pt\")\n",
+    "            if self.save_training:\n",
+    "                torch.save({\n",
+    "                    'step': learn.train_step,\n",
+    "                    'model_state_dict': learn.model.state_dict(),\n",
+    "                    'optimizer_state_dict': learn.optimizer.state_dict()},\n",
+    "                    self.dir / f\"model_{learn.train_step}+train.pt\")\n",
+    "            else: torch.save(learn.model.state_dict(), self.dir / f\"model_{learn.train_step}.pt\")\n",
     "        files = sorted(self.dir.glob(\"model_*.pt\"), key=lambda x: x.stem.split(\"_\")[1], reverse=True)\n",
     "        if len(files) > self.max_to_keep:\n",
     "            for f in files[self.max_to_keep:]: f.unlink()\n",
     "\n",
     "    def after_fit(self, learn):\n",
     "        torch.save(learn.model.state_dict(), self.dir / f\"model_last.pt\")\n",
+    "\n",
+    "\n",
+    "class TimerCB(Callback):\n",
+    "    def before_fit(self, learn):\n",
+    "        if not hasattr(learn, \"stats\"):\n",
+    "            learn.stats = {}\n",
+    "\n",
+    "    def before_batch(self, learn):\n",
+    "        if learn.model.training:\n",
+    "            self.start = time.time()\n",
+    "\n",
+    "    def after_batch(self, learn):\n",
+    "        if learn.model.training:\n",
+    "            end = time.time()\n",
+    "            learn.stats['steps_per_s'] = 1 / (end - self.start)\n",
     "\n",
     "\n",
     "class WandbCB(Callback):\n",
@@ -160,7 +184,7 @@
     "        learn.stats = {}\n",
     "        self.run = self.wandb.init(project=self.wcfg.project,\n",
     "                                   name=self.wcfg.name,\n",
-    "                                   config=OmegaConf.to_container(self.cfg),\n",
+    "                                   config=OmegaConf.to_container(self.cfg, resolve=True),\n",
     "                                   mode=\"disabled\" if self.cfg.debug_mode else \"online\")\n",
     "\n",
     "    def after_batch(self, learn):\n",
