--- a/nbs/04_eval.ipynb
+++ b/nbs/04_eval.ipynb
@@ -251,6 +251,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -264,9 +275,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib\n",
-    "import numpy as np\n",
     "\n",
     "fig_hparam = {\n",
     "    'figsize': (8, 5),\n",
