--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -38,9 +38,20 @@
    "source": [
     "or for editable installation\n",
     "```sh\n",
-    "git clone https://github.com/ssslakter/looped-experiments.git .\n",
+    "git clone https://github.com/ssslakter/looped-experiments.git\n",
     "cd looped-experiments\n",
     "pip install -e .\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes\n",
+    "If you use google colab run command below to update fastprogress to the working version\n",
+    "```sh\n",
+    "!pip install -I git+https://github.com/fastai/fastprogress.git\n",
     "```"
    ]
   },
@@ -51,7 +62,7 @@
     "## How to run\n",
     "To train models, run after installing the package\n",
     "```sh\n",
-    "launch-exps --help\n",
+    "python main.py --help\n",
     "```\n",
     "this will show you the config options you can use to run experiments."
    ]
