update project with configs

--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -28,19 +28,9 @@
    "metadata": {},
    "source": [
     "```sh\n",
-    "pip install git+https://github.com/ssslakter/looped-experiments.git\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "or for editable installation\n",
-    "```sh\n",
     "git clone https://github.com/ssslakter/looped-experiments.git\n",
     "cd looped-experiments\n",
-    "pip install -e .\n",
+    "pip install .\n",
     "```"
    ]
   },
