add custom curriculum

--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -22,8 +22,7 @@
     "import torch.nn.functional as F\n",
     "from torch import nn\n",
     "\n",
-    "from looped_experiments.nano_gpt import Block, LayerNorm\n",
-    "from looped_experiments.utils import get_config, show_config"
+    "from looped_experiments.nano_gpt import Block, LayerNorm"
    ]
   },
   {
@@ -186,6 +185,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from looped_experiments.tasks import LinearRegression\n",
+    "from looped_experiments.utils import get_config, show_config"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "cfg = get_config(overrides=['model=loop'])\n",
     "# show_config(cfg)"
    ]
@@ -197,15 +206,6 @@
    "outputs": [],
    "source": [
     "model = LoopedTransformer(cfg.model).to('cuda')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from looped_experiments.tasks import LinearRegression"
    ]
   },
   {
