--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -28,9 +28,13 @@
    "metadata": {},
    "source": [
     "```sh\n",
+    "pip install git+https://github.com/ssslakter/looped-experiments.git\n",
+    "```\n",
+    "or to also get notebooks\n",
+    "```sh\n",
     "git clone https://github.com/ssslakter/looped-experiments.git\n",
     "cd looped-experiments\n",
-    "pip install .\n",
+    "pip install -e .\n",
     "```"
    ]
   },
@@ -52,9 +56,14 @@
     "## How to run\n",
     "To train models, run after installing the package\n",
     "```sh\n",
-    "python main.py --help\n",
+    "looped-run --help\n",
     "```\n",
-    "this will show you the config options you can use to run experiments."
+    "this will show you the config options you can use to run experiments.\n",
+    "\n",
+    "If you cloned the repository you can also use shell scripts like below to run experiments\n",
+    "```sh\n",
+    "./scripts/loop.sh\n",
+    "```"
    ]
   }
  ],
@@ -63,6 +72,10 @@
    "display_name": "python3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "name": "python",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
