use less tokens, more eval

--- a/nbs/02_models.ipynb
+++ b/nbs/02_models.ipynb
@@ -124,9 +124,11 @@
     "        self.n_loops, self.n_loop_window = cfg.n_loops, cfg.n_loop_window\n",
     "        self.repeat_positional = cfg.repeat_positional\n",
     "        self.repeat_ln = cfg.repeat_ln\n",
+    "        self.keep_n_tokens = cfg.keep_n_tokens\n",
+    "        self.token_dec = cfg.token_dec or 0\n",
     "\n",
     "    def _model(self, z, x):\n",
-    "        z = z + x\n",
+    "        z = z + x  # residual with addition\n",
     "        if self.repeat_positional: z = self.add_positional(z)\n",
     "        z = self.backbone(z)\n",
     "        if self.repeat_ln: z = self.ln_f(z)\n",
@@ -135,10 +137,12 @@
     "    def forward(self, xs, ys):\n",
     "        horizon_start = max(0, self.n_loops - self.n_loop_window)\n",
     "        x = self.create_prompt(xs, ys)\n",
+    "        b, t, _ = x.size()\n",
     "        x = self.read_in(x)\n",
     "        if not self.repeat_positional: x = self.add_positional(x)\n",
     "        z = torch.zeros_like(x)\n",
-    "        preds = []\n",
+    "        keep = t\n",
+    "        preds = torch.zeros(self.n_loop_window, b, t // self.freq, device=x.device) + float('nan')\n",
     "        for i in range(self.n_loops):\n",
     "            if i < horizon_start:\n",
     "                with torch.no_grad(): z = self._model(z, x)\n",
@@ -146,15 +150,17 @@
     "            z = self._model(z, x)\n",
     "            y = z if self.repeat_ln else self.ln_f(z)\n",
     "            y = self.read_out(y).squeeze(-1)\n",
-    "            preds.append(y[:, ::self.freq])\n",
-    "            if self.cfg.keep_n_tokens:\n",
-    "                z = z[:, -self.cfg.keep_n_tokens:]\n",
-    "                x = x[:, -self.cfg.keep_n_tokens:]\n",
-    "        # for evaluation, authors only use the last prediction\n",
-    "        return torch.stack(preds) if self.training else preds[-1]\n",
+    "            preds[i - horizon_start, :, -(x.size(1) // self.freq):] = y[:, (x.size(1) - 2) % self.freq::self.freq]\n",
+    "            # remove first tokens\n",
+    "            keep = max(self.keep_n_tokens or t, keep - self.token_dec)\n",
+    "            z = z[:, -keep:]\n",
+    "            x = x[:, -keep:]\n",
+    "\n",
+    "        return preds\n",
     "\n",
     "\n",
-    "def loop_loss(preds, ys): return F.mse_loss(preds, ys.expand_as(preds))"
+    "def loop_loss(preds, ys):\n",
+    "    return torch.nanmean((preds - ys.expand_as(preds)).square())"
    ]
   },
   {
@@ -195,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cfg = get_config(overrides=['model=loop'])\n",
+    "cfg = get_config(overrides=['model=loop', 'model.token_dec=2', 'model.keep_n_tokens=5'])\n",
     "# show_config(cfg)"
    ]
   },
@@ -224,7 +230,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model(xs, ys)"
+    "res = model(xs, ys)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(9.5480, device='cuda:0', grad_fn=<DivBackward0>)"
+      ]
+     },
+     "execution_count": null,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loop_loss(res, ys)"
    ]
   }
  ],
