update plot results, readme

--- a/nbs/04_eval.ipynb
+++ b/nbs/04_eval.ipynb
@@ -61,7 +61,7 @@
     "\n",
     "\n",
     "def looped_error(preds, ys):\n",
-    "    # for lost tokens we take predictions from last loop the appeared in\n",
+    "    # for lost tokens we take predictions from last loop they appeared in\n",
     "    res = torch.zeros_like(preds[0])\n",
     "    for pred in preds:\n",
     "        res[~pred.isnan()] = pred[~pred.isnan()]\n",
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "# | export\n",
-    "def eval(cfg, model_path=None):\n",
+    "def eval(cfg, model_path=None, metric_fn=None):\n",
     "    train = cfg.training\n",
     "    task = get_task_cls(cfg.task.task_name)(train.batch_size, **cfg.task)\n",
     "    dl_eval = dataloader(task, train.eval_steps)\n",
@@ -88,8 +88,8 @@
     "    if '+train' in str(model_path): weights = weights['model_state_dict']\n",
     "    model.load_state_dict(weights)\n",
     "    loss_fn = get_loss(cfg.model)\n",
-    "    metric = looped_error if 'loop' in cfg.model.family else squared_error\n",
-    "    metric_cb = MetricsCB(metric)\n",
+    "    metric_fn = metric_fn or (looped_error if 'loop' in cfg.model.family else squared_error)\n",
+    "    metric_cb = MetricsCB(metric_fn)\n",
     "    cbs = [ToDeviceCB(), trans_input, metric_cb]\n",
     "    Learner(model, None, dl_eval, None, loss_fn=loss_fn, cbs=cbs).eval()\n",
     "    return metric_cb.metrics"
@@ -376,39 +376,26 @@
    "outputs": [],
    "source": [
     "# |export\n",
-    "def plot_results(res, save=False):\n",
-    "    fig_hparam = {\n",
-    "        'figsize': (8, 5),\n",
-    "        'labelsize': 28,\n",
-    "        'ticksize': 20,\n",
-    "        'linewidth': 5,\n",
-    "        'fontsize': 15,\n",
-    "        'titlesize': 20,\n",
-    "        'markersize': 15\n",
-    "    }\n",
+    "default_fig_params = {\n",
+    "    'figsize': (8, 5),\n",
+    "    'ticksize': 20,\n",
+    "    'linewidth': 5\n",
+    "}\n",
     "\n",
-    "    fig, ax = plt.subplots(1, figsize=fig_hparam['figsize'])\n",
     "\n",
-    "    cmap = plt.get_cmap(\"coolwarm\")\n",
-    "    result_name_list = res.keys()\n",
-    "    colors = cmap(np.linspace(0, 1, len(result_name_list)))\n",
-    "    for idx, model_name in enumerate(result_name_list):\n",
-    "        err = res[model_name][\"mean\"]\n",
-    "        ax.plot(err, color=colors[idx], lw=fig_hparam['linewidth'], label=model_name.capitalize())\n",
-    "        low = res[model_name][\"bootstrap_low\"]\n",
-    "        high = res[model_name][\"bootstrap_high\"]\n",
-    "        ax.fill_between(range(len(low)), low, high, alpha=0.3, color=colors[idx])\n",
+    "def plot_results(res: dict, ax=None, fig_params=default_fig_params, cmap=\"coolwarm\"):\n",
+    "    if ax is None: ax = plt.subplots(figsize=fig_params['figsize'])[1]\n",
+    "    colors = plt.get_cmap(cmap)(np.linspace(0, 1, len(res)))\n",
     "\n",
-    "    ax.tick_params(axis='both', labelsize=fig_hparam['ticksize'])\n",
-    "    ax.axhline(1, color='k', ls='--', lw=fig_hparam['linewidth'])\n",
-    "    # ax.set_ylim(-0.1, 1.25)\n",
-    "    # plt.xticks(np.arange(0, n_points))\n",
-    "    plt.rc('font', family='serif')\n",
-    "    ax.set_xlabel(\"in-context examples\", fontsize=fig_hparam['labelsize'])\n",
-    "    y_label = ax.set_ylabel(\"squared error\", fontsize=fig_hparam['labelsize'])\n",
-    "    legend = plt.legend(loc='center left', bbox_to_anchor=(1, 0.5), fontsize=fig_hparam['fontsize'])\n",
+    "    for col, (m_name, err) in zip(colors, res.items()):\n",
+    "        ax.plot(err[\"mean\"], color=col, lw=fig_params['linewidth'], label=m_name.capitalize())\n",
+    "        ax.fill_between(range(len(err[\"mean\"])),\n",
+    "                        err[\"bootstrap_low\"],\n",
+    "                        err[\"bootstrap_high\"],\n",
+    "                        alpha=0.3, color=col)\n",
     "\n",
-    "    if save: plt.savefig(\"figure.png\", dpi=600, bbox_inches='tight')"
+    "    ax.tick_params(axis='both', labelsize=fig_params['ticksize'])\n",
+    "    return ax"
    ]
   },
   {
@@ -428,7 +415,14 @@
     }
    ],
    "source": [
-    "plot_results(res)"
+    "ls, lw, fs = 28, 5, 15\n",
+    "\n",
+    "ax = plot_results(res)\n",
+    "ax.axhline(1, color='k', ls='--', lw=lw)\n",
+    "plt.rc('font', family='serif')\n",
+    "ax.set_xlabel(\"in-context examples\", fontsize=ls)\n",
+    "y_label = ax.set_ylabel(\"squared error\", fontsize=ls)\n",
+    "legend = plt.legend(loc='center left', bbox_to_anchor=(1, 0.5), fontsize=fs)"
    ]
   }
  ],
