--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -13,7 +13,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This repository contains experiments based on [looped-transformer paper](https://arxiv.org/abs/2311.12424)"
+    "⚠ For LLM Foundations task report see: [T-README.md](./T-README.md) (RU) !\n",
+    "\n",
+    "This repository contains experiments that try to reproduce [looped-transformer paper](https://arxiv.org/abs/2311.12424) and test models performance with different modifications."
    ]
   },
   {
