--- a/nbs/03.1_curriculum.ipynb
+++ b/nbs/03.1_curriculum.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| default_exp curriculum"
+    "# | default_exp curriculum"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#| export\n",
+    "# | export\n",
     "import math\n",
     "from functools import partial\n",
     "from types import SimpleNamespace\n",
@@ -97,10 +97,10 @@
     "\n",
     "def log_clm(cfg, steps, base=1.1):\n",
     "    values = torch.zeros_like(steps)\n",
-    "    bins=torch.cat((torch.tensor([float(\"-inf\")]),torch.arange(cfg.end - cfg.start)))\n",
-    "    for i, v in enumerate(cfg.interval*torch.cumsum(torch.pow(base, bins), 0)):\n",
-    "        values[steps >= v]= i*cfg.inc\n",
-    "    return torch.minimum(values+cfg.start, torch.tensor(cfg.end))\n",
+    "    bins = torch.cat((torch.tensor([float(\"-inf\")]), torch.arange(cfg.end - cfg.start)))\n",
+    "    for i, v in enumerate(cfg.interval * torch.cumsum(torch.pow(base, bins), 0)):\n",
+    "        values[steps >= v] = i * cfg.inc\n",
+    "    return torch.minimum(values + cfg.start, torch.tensor(cfg.end))\n",
     "\n",
     "\n",
     "def sqrt_clm(cfg, steps):\n",
@@ -108,7 +108,7 @@
     "\n",
     "\n",
     "def cos_clm(cfg, steps):\n",
-    "    return torch.round((cfg.end - cfg.start)/2 * -torch.cos(steps / cfg.interval * cfg.inc) + (cfg.end + cfg.start)/2)\n"
+    "    return torch.round((cfg.end - cfg.start) / 2 * -torch.cos(steps / cfg.interval * cfg.inc) + (cfg.end + cfg.start) / 2)"
    ]
   },
   {
@@ -121,25 +121,23 @@
     "class Curriculum:\n",
     "    \"\"\"Curriculum for training\"\"\"\n",
     "    funcs = {\n",
-    "            'linear': linear_clm,\n",
-    "            'log': log_clm,\n",
-    "            'sqrt': sqrt_clm,\n",
-    "            'cos': cos_clm\n",
-    "            }\n",
-    "    \n",
-    "    def __init__(self, cfg, n_steps=10_000, clm_type='linear', clm_func=None, **kwargs):\n",
+    "        'linear': linear_clm,\n",
+    "        'log': log_clm,\n",
+    "        'sqrt': sqrt_clm,\n",
+    "        'cos': cos_clm\n",
+    "    }\n",
+    "\n",
+    "    def __init__(self, cfg, n_steps=10_000, clm_func=None, **kwargs):\n",
     "        \"\"\"Initialize the Curriculum class.\n",
     "\n",
     "        Args:\n",
     "            cfg (dict): The configuration for the curriculum.\n",
     "            n_steps (int, optional): The total number of steps. Defaults to 10_000.\n",
-    "            clm_type (str, optional): The type of curriculum function. Used if `clm_func` is None. Defaults to 'linear'.\n",
     "            clm_func (function, optional): The custom curriculum function. Defaults to None.\n",
     "        \"\"\"\n",
     "        self.steps = torch.arange(0, n_steps, 1)\n",
-    "        f = clm_func or self.clm_func(clm_type)\n",
+    "        f = clm_func or self.clm_func(cfg.type)\n",
     "        self.values = f(cfg, self.steps, **kwargs).type(torch.int32)\n",
-    "        \n",
     "\n",
     "    @classmethod\n",
     "    def clm_func(self, type: str):\n",
@@ -147,7 +145,7 @@
     "        return self.funcs[type]\n",
     "\n",
     "    def __call__(self, step):\n",
-    "        return self.values[step-1].item()\n",
+    "        return self.values[step - 1].item()\n",
     "\n",
     "    def show(self, ax=None, figsize=(12, 5)):\n",
     "        if ax is None: _, ax = plt.subplots(figsize=figsize)\n",
@@ -174,7 +172,7 @@
    ],
    "source": [
     "cfg = curr.dims\n",
-    "c = partial(Curriculum, cfg=cfg, n_steps=train.n_epoch*train.train_steps)\n",
+    "c = partial(Curriculum, cfg=cfg, n_steps=train.n_epoch * train.train_steps)\n",
     "axes = plt.subplots(nrows=2, ncols=2, figsize=(10, 6), layout=\"constrained\")[1]\n",
     "for ax, f in zip(list(ax for axx in axes for ax in axx), Curriculum.funcs.keys()):\n",
     "    cr = c(clm_type=f)\n",
@@ -192,8 +190,8 @@
     "class CurriculumCB(Callback):\n",
     "    def __init__(self, curriculum_config, train_config):\n",
     "        self.cfg = curriculum_config\n",
-    "        kwgs = lambda x: ({} if not hasattr(x, 'kwargs') else x.kwargs)\n",
-    "        self.curs = {k: Curriculum(v, n_steps=train_config.train_steps * train_config.n_epoch, clm_type=v.type, **kwgs(v))\n",
+    "        kwargs = lambda x: ({} if not hasattr(x, 'kwargs') else x.kwargs)\n",
+    "        self.curs = {k: Curriculum(v, n_steps=train_config.train_steps * train_config.n_epoch, **kwargs(v))\n",
     "                     for k, v in curriculum_config.items()}\n",
     "\n",
     "    def update_task(self, learn, ds):\n",
